add 2D constraint test

--- a/MapHubServer/cesium.html
+++ b/MapHubServer/cesium.html
@@ -29,7 +29,28 @@
     <!--<p>Content goes here</p>-->
     <div id="cesiumContainer"></div>
     <script type="text/javascript">
-        var viewer = new Cesium.Viewer('cesiumContainer');
+        //var viewer = new Cesium.Viewer('cesiumContainer');
+        var viewer = new Cesium.Viewer('cesiumContainer', {
+            sceneMode: Cesium.SceneMode.SCENE2D
+        });
+        var scene = viewer.scene
+
+        // disable the default event handlers
+        scene.screenSpaceCameraController.enableRotate = false;
+        //scene.screenSpaceCameraController.enableTranslate = false;
+        //scene.screenSpaceCameraController.enableZoom = false;
+        scene.screenSpaceCameraController.enableTilt = false;
+        //scene.screenSpaceCameraController.enableLook = false;
+
+        //viewer.sceneMode = SceneMode.SCENE2D;
+        //viewer.sceneMode = Cesium.SceneMode.SCENE2D;
+
+        //var transitioner = new SceneTransitioner(scene)
+        //transitioner.to2D()
+
+        //// this works
+        //scene.morphTo2D();
+        
 
         //Set the hubs URL for the connection
         //$.connection.hub.url = "http://localhost:8080/signalr";
