--- a/MapHubServer/cesium.html
+++ b/MapHubServer/cesium.html
@@ -34,23 +34,31 @@
             sceneMode: Cesium.SceneMode.SCENE2D
         });
         var scene = viewer.scene
-
-        // disable the default event handlers
         scene.screenSpaceCameraController.enableRotate = false;
-        //scene.screenSpaceCameraController.enableTranslate = false;
-        //scene.screenSpaceCameraController.enableZoom = false;
         scene.screenSpaceCameraController.enableTilt = false;
-        //scene.screenSpaceCameraController.enableLook = false;
 
-        //viewer.sceneMode = SceneMode.SCENE2D;
-        //viewer.sceneMode = Cesium.SceneMode.SCENE2D;
+        var morphCompleteHandler = function () {
+            if (scene.mode == 2) {
+                // disable the default event handlers
+                scene.screenSpaceCameraController.enableRotate = false;
+                //scene.screenSpaceCameraController.enableTranslate = false;
+                //scene.screenSpaceCameraController.enableZoom = false;
+                scene.screenSpaceCameraController.enableTilt = false;
+                //scene.screenSpaceCameraController.enableLook = false;
+            } else {
+                // enable the default event handlers
+                scene.screenSpaceCameraController.enableRotate = true;
+                //scene.screenSpaceCameraController.enableTranslate = false;
+                //scene.screenSpaceCameraController.enableZoom = false;
+                scene.screenSpaceCameraController.enableTilt = true;
+                //scene.screenSpaceCameraController.enableLook = false;
+            }
+        };
 
-        //var transitioner = new SceneTransitioner(scene)
-        //transitioner.to2D()
-
-        //// this works
+        scene.morphComplete.addEventListener(morphCompleteHandler, scene);
+        //// this works 
         //scene.morphTo2D();
-        
+
 
         //Set the hubs URL for the connection
         //$.connection.hub.url = "http://localhost:8080/signalr";
