--- a/MapHubServer/index.html
+++ b/MapHubServer/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
     <a href="cesium.html">Cesium</a>
+    <br />
+    <a href="geoBrowser.html">geoBrowser (Cesium with non-default treatment)</a>
 </body>
 </html>
